[tool.poetry]
name = "corredores"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
mesa = "^2.1.4"
matplotlib = "^3.8.2"
numpy = "^1.26.2"
pandas = "^2.1.3"
pydantic = "^2.5.2"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
